tests/expectations/compiler/async_blocks/invalid_call_to_async_func.out
Error [ETYC0372003]: Expected type `Final<Fn()>` but type `()` was found
    --> compiler-test:3:16
     |
   3 |         return bar();
     |                ^^^^^
